// 公共模块
package PokeData;

message PBIdObject {
  optional int32 id = 1;                  // 数字id
  optional string idStr = 2;              // 某些id可能是字符串
}

message PBListReq {
  optional int32 offset = 1;              // 用于分页使用的offset
  optional int32 limit = 2;               // 用于分页使用的limit
}

message PBVersion {
  optional string name = 1;               // 全名
  optional string abstr = 2;              // 摘要, 用于显示
  optional int32 generation = 3;          // 世代
  optional string background = 4;         // 背景色
  optional string font = 5;               // 字体色
  optional uint64 createTime = 6;         // 创建时间
  optional uint64 modifyTime = 7;         // 修改时间
}

message PBVersionList {
  repeated PBVersion versions = 1;
}

message PBEggGroup {
  optional string name = 1;               // 名称
  optional string background = 2;         // 背景色
  optional string border = 3;             // 边距色
  optional uint64 createTime = 4;         // 创建时间
  optional uint64 modifyTime = 5;         // 修改时间
}

message PBEggGroupList {
  repeated PBEggGroup eggGroups = 1;
}

message PBProperty {
  optional string name = 1;               // 名称
  optional string background = 2;         // 背景色
  optional string border = 3;             // 边距色
  optional uint64 createTime = 4;         // 创建时间
  optional uint64 modifyTime = 5;         // 修改时间
}

message PBPropertyList {
  repeated PBProperty property = 1;
}

message PBTime {
  optional uint64 start = 1;              // 开始时间
  optional uint64 end = 2;                // 结束时间
}